--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Security Vulnerability Demonstrations</h1>
+            <h1>Security Vulnerability Demonstrations - Kisiskolai tananyag</h1>
             <p class="subtitle">Educational examples of Prototype Pollution, Clickjacking, and DOM Clobbering</p>
         </header>
 
