--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Interactive demonstration of Light DOM vs Shadow DOM vs IFrame security implications</p>
         </header>
 
-        <!-- PRESENTER: This section demonstrates three different encapsulation approaches -->
+        <!-- This section demonstrates three different encapsulation approaches -->
         <section class="demo-components">
             <h2>Three Encapsulation Approaches</h2>
             
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <!-- PRESENTER: This section allows live attack demonstrations -->
+        <!-- This section allows live attack demonstrations -->
         <section class="attack-playground">
             <h2>🎯 Attack Playground</h2>
             <p>Try running these attacks to see the security differences:</p>
@@ -92,7 +92,7 @@ document.head.appendChild(Object.assign(document.createElement('style'), {textCo
             </div>
         </section>
 
-        <!-- PRESENTER: Pre-built attack examples for demonstration -->
+        <!-- Pre-built attack examples for demonstration -->
         <section class="attack-examples">
             <h2>📋 Ready-to-Use Attack Examples</h2>
             <div class="examples-grid">
